--- a/css/styles.css
+++ b/css/styles.css
@@ -12,6 +12,7 @@
 body {
     font-family: 'Raleway', sans-serif;
     font-family: 'Roboto', sans-serif;
+    font-weight: 400;
     background-color: var(--body-color);
 }
 
