--- a/css/styles.css
+++ b/css/styles.css
@@ -10,7 +10,6 @@
 --second-body-color: #F5F4FA;
 }
 body {
-    font-family: 'Raleway', sans-serif;
     font-family: 'Roboto', sans-serif;
     font-weight: 400;
     background-color: var(--body-color);
@@ -202,8 +201,11 @@ button {
     text-decoration: none;
 }
 
+.address-section {
+    font-style: normal;
+}
+
 .footer-address {
-    font-style: normal;;
     font-size: 14px;
     line-height: 1.714;
     letter-spacing: 0.03em;
@@ -222,7 +224,6 @@ button {
     line-height: 1.625;
     text-align: center;
     letter-spacing: 0.03em;
-    width: 125px;
     height: 38px;
     left: 593px;
     top: 174px;
